# ai_workshop

./: .gitignore  README.md  sample.jsonl  source_download.ipynb
agent/adk/: README.md  pyproject.toml
agent/adk/01-agent/: README.md
agent/adk/01-agent/.adk/: session.db
agent/adk/01-agent/_shins/: root_agent.yaml  sub_agent_1.yaml  sub_agent_2.yaml
agent/adk/01-agent/basic/: README.md  agent.py
agent/adk/01-agent/live/: README.md
agent/adk/01-agent/live_stream/: README.md  agent.py
agent/adk/01-agent/observability/: README.md  agent.py
agent/adk/01-agent/runtime/: README.md  agent.py  runner.py  sub_agent.py
agent/adk/01-basic/: README.md
agent/adk/01-basic/engine/: README.md  _deploy.py  _run.py  agent.py  run.ipynb
agent/adk/01-basic/live/: README.md
agent/adk/01-basic/runner/: README.md  agent.py  run.ipynb
agent/adk/01-basic/runtime/: runner.py
agent/adk/01-basic/text/: README.md  agent.py
agent/adk/02-context/: README.md  adk_session.db
agent/adk/02-context/event/: README.md  agent.py  run.ipynb  runner.py
agent/adk/02-context/memory/: README.md  agent.py  run.ipynb
agent/adk/02-context/memory_bank/: README.md  agent.py  runner_recall.py  runner_store.py
agent/adk/02-context/session/: README.md  adk_session.db  agent.py  run.ipynb  runner.py
agent/adk/02-context/state/: README.md  (+3 more)
agent/adk/03-tools/: README.md
agent/adk/04-mcp/: README.md
agent/adk/05-workflow/: README.md
agent/adk/06-callback/: README.md
agent/adk/07-a2a/: README.md
agent/adk/07-deploy/: README.md
agent/adk/07-misc/: README.md
agent/adk/08-output/: README.md
agent/adk/09-model/: README.md
(+193 files in other folders)
