[project]
name = "adk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "agentops>=0.4.18",
    "anyio>=4.9.0",
    "google-adk>=1.22.0",
    "google-cloud-aiplatform[adk,agent-engines]>=1.93.0",
    "google-cloud-storage>=3.0.0",
    "google-genai>=1.59.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "litellm>=1.70.4",
    "llama-index>=0.12.39",
    "mcp>=1.9.0",
    "notebook>=7.5.2",
    "npx>=0.1.6",
    "ollama>=0.4.9",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "python-a2a>=0.5.6",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "tavily-python>=0.7.2",
    "toolbox-core>=0.4.0",
    "aiosqlite>=0.21.0",
]
